financial and other tools added

--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
 
         <div class="tools-grid">
             <!-- Buttons with Href Links -->
-            <a href="calculator.html" class="tool-btn" target="_blank">
+            <a href="gamestoolshub/tools/advancecalc.html" class="tool-btn" target="_blank">
                 <i class="fas fa-calculator fa-2x"></i>
                 <h3>Standard Calculator</h3>
             </a>
 
-            <a href="financial-calculator.html" class="tool-btn" target="_blank">
+            <a href="gamestoolshub/financialtools/toolsindex.html" class="tool-btn" target="_blank">
                 <i class="fas fa-chart-line fa-2x"></i>
                 <h3>Financial Calculator</h3>
             </a>
