pdf operation tool added

--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
                 <i class="fas fa-ruler-combined fa-2x"></i>
                 <h3>Unit Converter</h3>
             </a>
+
+            <a href="pdf/index.html" class="tool-btn" target="_blank">
+                <i class="fas fa-file-pdf fa-2x"></i>
+                <h3>Pdf Tools</h3>
+            </a>
         </div>
 
         <div class="ads-section">
