add section added

--- a/pdf/index.html
+++ b/pdf/index.html
@@ -5,13 +5,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Operations</title>
+    <!-- SEO Meta Tags -->
+    <title>Online PDF Editor - Create, Merge, Split & Modify PDFs Free</title>
+    <meta name="description" content="Free online PDF editor with advanced features. Create, merge, split, compress, and modify PDF documents directly in your browser. No installation required.">
+    <meta name="keywords" content="PDF editor, merge PDF, split PDF, create PDF, compress PDF, online PDF tools">
+    <meta name="author" content="Your Company Name">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sanjaysingh1990.github.io/pantool/pdf/index.html">
+    <meta property="og:title" content="Online PDF Editor - Free PDF Tools">
+    <meta property="og:description" content="Free online PDF editor with advanced features. Create, merge, split, compress, and modify PDF documents.">
+    <meta property="og:image" content="https://sanjaysingh1990.github.io/pantool/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sanjaysingh1990.github.io/pantool/pdf/index.html">
+    <meta property="twitter:title" content="Online PDF Editor - Free PDF Tools">
+    <meta property="twitter:description" content="Free online PDF editor with advanced features. Create, merge, split, compress, and modify PDF documents.">
+    <meta property="twitter:image" content="https://sanjaysingh1990.github.io/pantool/images/og-image.jpg">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://sanjaysingh1990.github.io/pantool/pdf/index.html">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebApplication",
+            "name": "Online PDF Editor",
+            "description": "Free online PDF editing tools",
+            "applicationCategory": "Productivity",
+            "operatingSystem": "All",
+            "offers": {
+                "@type": "Offer",
+                "price": "0.00",
+                "priceCurrency": "USD"
+            }
+        }
+    </script>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
+    <!-- Ad Scripts -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
     <div class="container">
         <h1>PDF Operations</h1>
 
@@ -101,7 +142,35 @@
         </div>
     </div>
 
+    <!-- SEO Footer -->
+    <footer class="seo-footer">
+        <div class="footer-content">
+            <h3>Online PDF Tools</h3>
+            <p>Free PDF editor offering comprehensive solutions for all your document needs:</p>
+            <ul>
+                <li>PDF Creation</li>
+                <li>Document Merging</li>
+                <li>File Splitting</li>
+                <li>Secure Encryption</li>
+                <li>Cloud Integration</li>
+            </ul>
+            <div class="keywords">
+                <span>PDF Editor</span> |
+                <span>Merge PDF Online</span> |
+                <span>Split PDF Free</span> |
+                <span>Create PDF</span> |
+                <span>PDF Tools</span>
+            </div>
+        </div>
+    </footer>
+
+
     <script src="script.js"></script>
+
+    <!-- Initialize Ads -->
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
 
 </html>
