--- a/jsonvalidator.html
+++ b/jsonvalidator.html
@@ -139,6 +139,9 @@
             }
         }
     </style>
+    <!-- Ad Scripts -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
