--- a/unitconverter.html
+++ b/unitconverter.html
@@ -79,6 +79,10 @@
             margin: 10px 0;
         }
     </style>
+
+    <!-- Ad Scripts -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
